VT-1139: tukipalveluita funktiokutsun käärimiseksi funktiokutsulle, jolla on nimettyjä funktioargumentteja

--- a/src/main/webapp/app/index.html
+++ b/src/main/webapp/app/index.html
@@ -68,6 +68,8 @@
     <script type="text/javascript" src="laskentakaavat/laskentakaavaeditori/utilities/templateService.js"></script>
     <script type="text/javascript" src="laskentakaavat/laskentakaavaeditori/utilities/guid.js"></script>
     <script type="text/javascript" src="laskentakaavat/laskentakaavaeditori/funktioasetukset/funktioasetusController.js"></script>
+    <script type="text/javascript" src="laskentakaavat/laskentakaavaeditori/funktioasetukset/laskentakaavamodalservice.js"></script>
+    <script type="text/javascript" src="laskentakaavat/laskentakaavaeditori/funktioasetukset/nimettyfunktioargumenttikaareservice.js"></script>
     <script type="text/javascript" src="laskentakaavat/listaus/hakukohdelaskentakaavalista.js"></script>
     <script type="text/javascript" src="laskentakaavat/listaus/kaavakopiointi.js"></script>
 
