--- a/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/funktioasetukset/funktiokutsuAsetuksetModal.html
+++ b/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/funktioasetukset/funktiokutsuAsetuksetModal.html
@@ -635,6 +635,33 @@
         <h3>{{ t('funktiokutsukaaremodal.header') || 'Funktiokutsun kääriminen'}}</h3>
     </div>
     <div class="modal-body">
+
+        <form name="form" class="form-horizontal" ng-submit="submit()">
+            <div class="form-group">
+                <label class="control-label col-md-2" for="kaarivaFunktiokutsuTyyppi">{{ t('laskentakaavaviiteasetuksetmodal.kaareenvalinta.kaarija') || 'Käärivä funktiokutsu' }}</label>
+
+                <div class="col-md-6">
+                    <select ng-model=""></select>
+                    <input class="form-control" type="text" id="kaarivaFunktiokutsuTyyppi" ng-model="model.valintaryhma.nimi" required/>
+                    <span class="red" ng-show="model.nameerror">{{ t('valintaryhmalomakeuusi.valintaryhmalomakeuusi.nimiloytyyjo') || 'Valintaryhmän nimi on jo käytössä. Anna jokin toinen nimi ryhmälle.' }}</span>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="control-label col-md-2" for="kaarivaFunktiokutsuTyyppi">{{ t('laskentakaavaviiteasetuksetmodal.kaareenvalinta.kaarija') || 'Käärivä funktiokutsu' }}</label>
+
+                <div class="col-md-6">
+                    <input class="form-control" type="text" id="kaarivaFunktiokutsuTyyppi" ng-model="model.valintaryhma.nimi" required/>
+                    <span class="red" ng-show="model.nameerror">{{ t('valintaryhmalomakeuusi.valintaryhmalomakeuusi.nimiloytyyjo') || 'Valintaryhmän nimi on jo käytössä. Anna jokin toinen nimi ryhmälle.' }}</span>
+                </div>
+            </div>
+
+        </form>
+
+
+
+
+
         <table class="funktiokutsut">
             <tbody ng-if="selectedFunktiokutsuIsLukuarvoFunktio">
                 <tr>
@@ -763,7 +790,7 @@
     <div class="modal-body">
         <h3>{{ t('laskentakaavaviiteasetuksetmodal.kaareenvalinta.ohje') || ''}}</h3>
         <select ng-model="childFunktiokutsuIndex" ng-options="option.index as option.label for option in kaareFunktiokutsuAsetukset.argumenttiOptions"></select>
-        <button class="btn btn-default btn-sm" ng-click="kaariNimettyFunktioargumentti(kaareFunktiokutsuAsetukset.funktiokutsuNimi, childFunktiokutsuIndex)">{{ t('laskentakaavaviiteasetuksetmodal.kaareenvalinta.tallenna') || 'Kääri funktiokutsu'}}</button>
+        <button class="btn btn-default btn-sm" ng-click="kaariNimettyFunktioargumentti(kaareFunktiokutsuAsetukset.funktiokutsuNimi, childFunktiokutsuIndex); sulje()">{{ t('laskentakaavaviiteasetuksetmodal.kaareenvalinta.tallenna') || 'Kääri funktiokutsu'}}</button>
     </div>
     <div class="modal-footer">
         <button class="btn btn-default btn-sm" ng-click="laskentakaavaModalService.toggleModalSelection('kaare')" popover-popup-delay="500"
