--- a/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/funktioasetukset/funktiokutsuAsetuksetModal.html
+++ b/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/funktioasetukset/funktiokutsuAsetuksetModal.html
@@ -528,7 +528,7 @@
 
     <div class="modal-footer">
         <!-- Funktiokutsun asetukset -->
-        <button class="btn btn-default btn-sm" ng-disabled="!userAccess.crudOrg" ng-click="laskentakaavaModalService.toggleModalSelection('kaare')">{{ t('laskentakaavaviiteasetuksetmodal.funktiokutsunKaariminen') || 'Funktiokutsun kääriminen toisella funktiokutsulla'}}</button>
+        <button class="btn btn-default btn-sm" ng-disabled="!userAccess.crudOrg" ng-click="laskentakaavaModalService.toggleModalSelection('kaare')">{{ t('funktiokutsuasetuksetmodal.kaariminen') || 'Funktiokutsun kääriminen'}}</button>
         <button class="btn btn-default btn-sm"
                 ng-disabled="alikaavaValues.isAlikaava || funktioasetukset.parentFunktiokutsu === model.laskentakaavapuu.funktiokutsu || !userAccess.crudOrg"
                 ng-click="laskentakaavaModalService.toggleModalSelection('tallennusKaavana')">{{ t('laskentakaavaviiteasetuksetmodal.kaavanosantallennus') || 'Kaavan osan
@@ -637,133 +637,29 @@
     <div class="modal-body">
 
         <form name="form" class="form-horizontal" ng-submit="submit()">
+
             <div class="form-group">
-                <label class="control-label col-md-2" for="kaarivaFunktiokutsuTyyppi">{{ t('laskentakaavaviiteasetuksetmodal.kaareenvalinta.kaarija') || 'Käärivä funktiokutsu' }}</label>
+                <label class="control-label col-md-3" for="kaarivaFunktiokutsuTyyppi">{{ t('funktiokutsuasetuksetmodal.kaareenvalinta.kaarija') || 'Käärivä funktiokutsu' }}</label>
 
                 <div class="col-md-6">
-                    <select ng-model=""></select>
-                    <input class="form-control" type="text" id="kaarivaFunktiokutsuTyyppi" ng-model="model.valintaryhma.nimi" required/>
-                    <span class="red" ng-show="model.nameerror">{{ t('valintaryhmalomakeuusi.valintaryhmalomakeuusi.nimiloytyyjo') || 'Valintaryhmän nimi on jo käytössä. Anna jokin toinen nimi ryhmälle.' }}</span>
+                    <select id="kaarivaFunktiokutsuTyyppi"  ng-options=""></select>
                 </div>
             </div>
 
             <div class="form-group">
-                <label class="control-label col-md-2" for="kaarivaFunktiokutsuTyyppi">{{ t('laskentakaavaviiteasetuksetmodal.kaareenvalinta.kaarija') || 'Käärivä funktiokutsu' }}</label>
+                <label class="control-label col-md-3" for="kaarittavanSijaintiKaarijassa">{{ t('funktiokutsuasetuksetmodal.kaareenvalinta.kaarija') || 'Käärivä funktiokutsu' }}</label>
+                <div class="col-md-3">
+                    <select id="kaarittavanSijaintiKaarijassa" ng-model="childFunktiokutsuIndex" ng-options="option.index as option.label for option in kaareFunktiokutsuAsetukset.argumenttiOptions"></select>
 
-                <div class="col-md-6">
-                    <input class="form-control" type="text" id="kaarivaFunktiokutsuTyyppi" ng-model="model.valintaryhma.nimi" required/>
-                    <span class="red" ng-show="model.nameerror">{{ t('valintaryhmalomakeuusi.valintaryhmalomakeuusi.nimiloytyyjo') || 'Valintaryhmän nimi on jo käytössä. Anna jokin toinen nimi ryhmälle.' }}</span>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-md-offset-3">
+                    <button class="btn btn-default btn-sm" ng-click="kaariNimettyFunktioargumentti(kaareFunktiokutsuAsetukset.funktiokutsuNimi, childFunktiokutsuIndex); sulje()">{{ t('funktiokutsuasetuksetmodal.kaareenvalinta.tallenna') || 'Kääri funktiokutsu'}}</button>
                 </div>
             </div>
 
         </form>
-
-
-
-
-
-        <table class="funktiokutsut">
-            <tbody ng-if="selectedFunktiokutsuIsLukuarvoFunktio">
-                <tr>
-                    <td ng-click="kaariFunktiokutsu('SUMMA'); ">
-                        <span>{{ t('laskentakaavapuu.summa') || 'Summa' }}</span></td>
-                    <td ng-click="kaariFunktiokutsu('JOS'); ">
-                        <span>{{ t('laskentakaavapuu.jos') || 'Jos' }}</span></td>
-                </tr>
-                <tr>
-                    <td ng-click="kaariFunktiokutsu('TULO'); ">
-                        <span>{{ t('laskentakaavapuu.tulo') || 'Tulo' }}</span></td>
-                    <td ng-click="kaariFunktiokutsu('OSAMAARA'); "><span>{{ t('laskentakaavapuu.osamaara') || 'Osamäärä' }}</span>
-                    </td>
-                </tr>
-                <tr>
-                    <td ng-click="kaariFunktiokutsu('KESKIARVO'); "><span>{{ t('laskentakaavapuu.keskiarvo') || 'Keskiarvo' }}</span>
-                    </td>
-                    <td ng-click="kaariFunktiokutsu('MEDIAANI'); "><span>{{ t('laskentakaavapuu.mediaani') || 'Mediaani' }}</span>
-                    </td>
-                </tr>
-                <tr>
-                    <td ng-click="kaariFunktiokutsu('MINIMI'); "><span>{{ t('laskentakaavapuu.minimi') || 'Minimi' }}</span>
-                    </td>
-                    <td ng-click="kaariFunktiokutsu('MAKSIMI'); "><span>{{ t('laskentakaavapuu.maksimi') || 'Maksimi' }}</span>
-                    </td>
-                </tr>
-                <tr>
-                    <td ng-click="kaariFunktiokutsu('SUMMANPARASTA'); ">
-                        <span>{{ t('laskentakaavapuu.nparastasumma') || 'N parasta summa' }}</span></td>
-                    <td ng-click="kaariFunktiokutsu('KESKIARVONPARASTA'); ">
-                        <span>{{ t('laskentakaavapuu.nparastakeskiarvo') || 'N parasta keskiarvo' }}</span></td>
-                </tr>
-                <tr>
-                    <td ng-click="kaariFunktiokutsu('NMAKSIMI'); "><span>{{ t('laskentakaavapuu.nparas') || 'N paras' }}</span>
-                    </td>
-                    <td ng-click="kaariFunktiokutsu('NMINIMI'); "><span>{{ t('laskentakaavapuu.nhuonoin') || 'N huonoin' }}</span>
-                    </td>
-                </tr>
-                <tr>
-                    <td ng-click="kaariFunktiokutsu('NEGAATIO'); "><span>{{ t('laskentakaavapuu.negaatio') || 'Negaatio' }}</span>
-                    </td>
-                    <td ng-click="kaariFunktiokutsu('PYORISTYS'); "><span>{{ t('laskentakaavapuu.pyoristys') || 'Pyöristys' }}</span>
-                    </td>
-                </tr>
-                <tr>
-                    <td ng-click="kaariFunktiokutsu('HYLKAA'); "><span>{{ t('laskentakaavapuu.hylkaa') || 'Hylkää' }}</span>
-                    </td>
-                    <td ng-click="kaariFunktiokutsu('HYLKAAARVOVALILLA'); ">
-                        <span>{{ t('laskentakaavapuu.hylkaaarvovalilla') || 'Hylkää arvovälillä' }}</span></td>
-                </tr>
-                <tr>
-                    <td ng-click="kaariFunktiokutsu('KONVERTOILUKUARVO'); ">
-                        <span>{{ t('laskentakaavapuu.konversio') || 'Konversio' }}</span></td>
-                    <td ng-click="kaariFunktiokutsu('NIMETTYLUKUARVO'); ">
-                        <span>{{ t('laskentakaavapuu.nimettylukuarvo') || 'Nimetty lukuarvo' }}</span></td>
-                </tr>
-                <tr>
-                    <td ng-click="kaariFunktiokutsu('SKAALAUS'); "><span>{{ t('laskentakaavapuu.skaalaus') || 'Skaalaus' }}</span>
-                    </td>
-                    <td ng-click="kaariFunktiokutsu('PAINOTETTUKESKIARVO'); ">
-                        <span>{{ t('laskentakaavapuu.painotettukeskiarvo') || 'Painotettu keskiarvo' }}</span></td>
-                </tr>
-                <tr>
-                    <td ng-click="kaariFunktiokutsu('HAELUKUARVOEHDOLLA'); ">
-                        <span>{{ t('laskentakaavapuu.haelukuarvoehdolla') || 'Hae lukuarvo ehdolla' }}</span></td>
-                    <td ng-click="kaariFunktiokutsu('HAEYOARVOSANA'); ">
-                        <span>{{ t('laskentakaavapuu.yoarvosana') || 'YO-arvosana' }}</span></td>
-                </tr>
-                <tr>
-                    <td ng-click="kaariFunktiokutsu('HAEMERKKIJONOJAKONVERTOILUKUARVOKSI'); ">
-                        <span>{{ t('laskentakaavapuu.haemerkkijono') || 'Hae merkkijono ja konvertoi lukuarvoksi' }}</span></td>
-                    <td>
-                </tr>
-            </tbody>
-            <tbody ng-if="!selectedFunktiokutsuIsLukuarvoFunktio">
-                <tr>
-                    <td ng-click="kaariFunktiokutsu('TAI'); ">
-                        <span>{{ t('laskentakaavapuu.tai') || 'Tai' }}</span></td>
-                    <td ng-click="kaariFunktiokutsu('JA'); ">
-                        <span>{{ t('laskentakaavapuu.ja') || 'Ja' }}</span></td>
-                </tr>
-                <tr>
-                    <td ng-click="kaariFunktiokutsu('SUUREMPITAIYHTASUURI'); ">
-                        <span>{{ t('laskentakaavapuu.suurempitaiyhtasuuri') || 'Suurempi tai yhtä suuri' }}</span></td>
-                    <td ng-click="kaariFunktiokutsu('SUUREMPI'); "><span>{{ t('laskentakaavapuu.suurempi') || 'Suurempi' }}</span>
-                    </td>
-                </tr>
-                <tr>
-                    <td ng-click="kaariFunktiokutsu('YHTASUURI'); "><span>{{ t('laskentakaavapuu.yhtasuuri') || 'Yhtä suuri' }}</span>
-                    </td>
-
-                    <td ng-click="kaariFunktiokutsu('PIENEMPI'); "><span>{{ t('laskentakaavapuu.pienempi') || 'Pienempi' }}</span>
-                    </td>
-                </tr>
-                <tr>
-                    <td ng-click="kaariFunktiokutsu('PIENEMPITAIYHTASUURI'); ">
-                        <span>{{ t('laskentakaavapuu.pienempitaiyhtasuuri') || 'Pienempi tai yhtä suuri' }}</span></td>
-                    <td ng-click="kaariFunktiokutsu('EI'); ">
-                        <span>{{ t('laskentakaavapuu.ei') || 'Ei' }}</span></td>
-                </tr>
-            </tbody>
-        </table>
     </div>
 
     <div class="modal-footer">
@@ -788,15 +684,15 @@
         <h3>{{ t('funktiokutsukaaremodal.header') || 'Funktiokutsun kääriminen'}}</h3>
     </div>
     <div class="modal-body">
-        <h3>{{ t('laskentakaavaviiteasetuksetmodal.kaareenvalinta.ohje') || ''}}</h3>
+        <h3>{{ t('funktiokutsuasetuksetmodal.kaareenvalinta.ohje') || ''}}</h3>
         <select ng-model="childFunktiokutsuIndex" ng-options="option.index as option.label for option in kaareFunktiokutsuAsetukset.argumenttiOptions"></select>
-        <button class="btn btn-default btn-sm" ng-click="kaariNimettyFunktioargumentti(kaareFunktiokutsuAsetukset.funktiokutsuNimi, childFunktiokutsuIndex); sulje()">{{ t('laskentakaavaviiteasetuksetmodal.kaareenvalinta.tallenna') || 'Kääri funktiokutsu'}}</button>
+        <button class="btn btn-default btn-sm" ng-click="kaariNimettyFunktioargumentti(kaareFunktiokutsuAsetukset.funktiokutsuNimi, childFunktiokutsuIndex); sulje()">{{ t('funktiokutsuasetuksetmodal.kaareenvalinta.tallenna') || 'Kääri funktiokutsu'}}</button>
     </div>
     <div class="modal-footer">
         <button class="btn btn-default btn-sm" ng-click="laskentakaavaModalService.toggleModalSelection('kaare')" popover-popup-delay="500"
                 popover-placement="top" popover-trigger="mouseenter"
                 popover="{{ t('laskentakaavaviiteasetuksetmodal.muutokseteivat') || 'Muutokset eivät tallennu ennen kuin tallennat kaavan laskentakaavanäkymästä' }}">
-            <i class="fa fa-arrow-left"></i> {{ t('laskentakaavaviiteasetuksetmodal.kaareenvalinta.palaa') || 'Palaa funktiokutsun käärefunktion valintaan' }}
+            <i class="fa fa-arrow-left"></i> {{ t('funktiokutsuasetuksetmodal.kaareenvalinta.palaa') || 'Palaa funktiokutsun käärefunktion valintaan' }}
         </button>
 
         <button class="btn btn-default btn-sm" ng-click="sulje()" popover-popup-delay="500" popover-placement="top"
