--- a/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/funktioasetukset/funktiokutsuAsetuksetModal.html
+++ b/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/funktioasetukset/funktiokutsuAsetuksetModal.html
@@ -642,20 +642,15 @@
                 <label class="control-label col-md-3" for="kaarivaFunktiokutsuTyyppi">{{ t('funktiokutsuasetuksetmodal.kaareenvalinta.kaarija') || 'Käärivä funktiokutsu' }}</label>
 
                 <div class="col-md-6">
-                    <select id="kaarivaFunktiokutsuTyyppi"  ng-options=""></select>
+                    <select id="kaarivaFunktiokutsuTyyppi" ng-model="selectedKaarivaFunktionimi" ng-options="option.funktionimi as option.UIName for option in funktioKaare.funktioKaare.funktioKaareLista"></select>
                 </div>
             </div>
 
-            <div class="form-group">
-                <label class="control-label col-md-3" for="kaarittavanSijaintiKaarijassa">{{ t('funktiokutsuasetuksetmodal.kaareenvalinta.kaarija') || 'Käärivä funktiokutsu' }}</label>
-                <div class="col-md-3">
-                    <select id="kaarittavanSijaintiKaarijassa" ng-model="childFunktiokutsuIndex" ng-options="option.index as option.label for option in kaareFunktiokutsuAsetukset.argumenttiOptions"></select>
-
-                </div>
-            </div>
-            <div class="form-group">
-                <div class="col-md-offset-3">
-                    <button class="btn btn-default btn-sm" ng-click="kaariNimettyFunktioargumentti(kaareFunktiokutsuAsetukset.funktiokutsuNimi, childFunktiokutsuIndex); sulje()">{{ t('funktiokutsuasetuksetmodal.kaareenvalinta.tallenna') || 'Kääri funktiokutsu'}}</button>
+            <div class="form-group" collapse="!(selectedKaarivaFunktioNimi && funktiokuvausService.hasNimettyFunktioargumenttiByFunktioNimi(selectedKaarivaFunktioNimi))">
+                <label class="control-label col-md-3" for="kaarittavanSijaintiKaarijassa">{{ t('funktiokutsuasetuksetmodal.kaareenvalinta.sijainti') || 'Käärittävän sijoittaminen' }}</label>
+                <div class="col-md-9">
+                    <select id="kaarittavanSijaintiKaarijassa" ng-model="childFunktiokutsuIndex" ng-options="option.index as option.label for option in funktioKaare.funktioKaare.argumenttiOptions"></select>
+                    <span class="help-block">{{ t('funktiokutsuasetuksetmodal.kaareenvalinta.sijainti.help') || 'Valitulle käärivälle funktiokutsulle on määritelty nimettyjä funktioargumentteja, valitse mihin kohtaan nimettyjen funktioargumenttien listaa haluat laskentakaavasta valitun funktiokutsun kääriä'}}</span>
                 </div>
             </div>
 
@@ -666,9 +661,13 @@
         <button class="btn btn-default btn-sm" ng-click="laskentakaavaModalService.toggleModalSelection('asetukset')" popover-popup-delay="500"
                 popover-placement="top" popover-trigger="mouseenter"
                 popover="{{ t('laskentakaavaviiteasetuksetmodal.muutokseteivat') || 'Muutokset eivät tallennu ennen kuin tallennat kaavan laskentakaavanäkymästä' }}">
-            <i class="fa fa-arrow-left"></i> {{ t('laskentakaavaviiteasetuksetmodal.palaafunktioasetuksiin') || 'Palaa
-            funktioasetuksiin' }}
+            <i class="fa fa-arrow-left"></i> {{ t('laskentakaavaviiteasetuksetmodal.palaafunktioasetuksiin') || 'Palaa funktioasetuksiin' }}
         </button>
+
+        <button class="btn btn-default btn-sm" ng-click="kaariNimettyFunktioargumentti(funktioKaare.funktiokutsuNimi, childFunktiokutsuIndex); sulje()"
+                ng-disabled="!selectedKaarivaFunktionimi"
+                popover-popup-delay="500" popover-placement="top" popover-trigger="mouseenter"
+                popover="{{ t('laskentakaavaviiteasetuksetmodal.muutokseteivat') || 'Muutokset eivät tallennu ennen kuin tallennat kaavan laskentakaavanäkymästä' }}">{{ t('funktiokutsuasetuksetmodal.kaareenvalinta.tallenna') || 'Kääri funktiokutsu'}}</button>
 
         <button class="btn btn-default btn-sm" ng-click="sulje()" popover-popup-delay="500" popover-placement="top"
                 popover-trigger="mouseenter"
@@ -685,8 +684,8 @@
     </div>
     <div class="modal-body">
         <h3>{{ t('funktiokutsuasetuksetmodal.kaareenvalinta.ohje') || ''}}</h3>
-        <select ng-model="childFunktiokutsuIndex" ng-options="option.index as option.label for option in kaareFunktiokutsuAsetukset.argumenttiOptions"></select>
-        <button class="btn btn-default btn-sm" ng-click="kaariNimettyFunktioargumentti(kaareFunktiokutsuAsetukset.funktiokutsuNimi, childFunktiokutsuIndex); sulje()">{{ t('funktiokutsuasetuksetmodal.kaareenvalinta.tallenna') || 'Kääri funktiokutsu'}}</button>
+        <select ng-model="childFunktiokutsuIndex" ng-options="option.index as option.label for option in funktioKaare.argumenttiOptions"></select>
+        <button class="btn btn-default btn-sm" ng-click="kaariNimettyFunktioargumentti(funktioKaare.funktiokutsuNimi, childFunktiokutsuIndex); sulje()">{{ t('funktiokutsuasetuksetmodal.kaareenvalinta.tallenna') || 'Kääri funktiokutsu'}}</button>
     </div>
     <div class="modal-footer">
         <button class="btn btn-default btn-sm" ng-click="laskentakaavaModalService.toggleModalSelection('kaare')" popover-popup-delay="500"
